[metadata]
name = transmutation
version = 0.1.0
author = Erin Turnbull
author_email = erin.a.turnbull@gmail.com
description = Create and manage databases from config files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnbullerin/transmutation
project_urls =
    Bug Tracker = https://github.com/turnbullerin/transmutation/issues
    Documentation = https://transmutation.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src